discussion/kv_engine/155194/155194_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

TaskInCore-WIP

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-07 11:49:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-07 12:21:10.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9553/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9553/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9553/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36506/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36506/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11128/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11128/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11546/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11275/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10198/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10198/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19131/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19131/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8150/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/100/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31194/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
